[package]
name = "day07"
version = "0.1.0"
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.10"
intcode = { version = "0.1.0", path = "../intcode" }
itertools = "0.12.0"
permutohedron = "0.2.4"
structopt = "0.3.21"
thiserror = "1.0.22"
